--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
 body {
   width: 100%;
   height: 100%;
-  background: url("b2.jpg");
+  background: url("b1.gif") no-repeat center center fixed;
   font-family: 'Righteous', cursive;
   margin: 0;
-  position: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
 
 body:before {
@@ -16,11 +20,11 @@ body:before {
   top: 0;
   left: 0;
   z-index: -1;
-  background-image: -moz-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(221, 66, 36, 0.55));
-  background-image: -ms-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(221, 66, 36, 0.55));
-  background-image: -webkit-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(221, 66, 36, 0.55));
-  background-image: -o-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(221, 66, 36, 0.55));
-  background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.75), rgba(221, 66, 36, 0.55));
+  background-image: -moz-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+  background-image: -ms-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+  background-image: -webkit-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(53, 238, 167, 0.1));
+  background-image: -o-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+  background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
   background-size: auto;
 }
 
