--- a/style.css
+++ b/style.css
@@ -1,95 +1,195 @@
 @import url('https://fonts.googleapis.com/css?family=Righteous');
-body {
-  width: 100%;
-  height: 100%;
-  background: url("b1.gif") no-repeat center center fixed;
-  font-family: 'Righteous', cursive;
-  margin: 0;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+html {
+    height: 100%;
+  }
+  
+  body {
+    background: url("b1.gif") no-repeat center center fixed;
+    margin: 0;
+    top: 200px;
+    font-family: 'Righteous', cursive;
+    margin: 0;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  body:before {
+    width: 100%;
+    height: 100%;
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: -moz-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+    background-image: -ms-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+    background-image: -webkit-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(53, 238, 167, 0.1));
+    background-image: -o-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+    background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
+    background-size: auto;
+  }
+  
+  
+  
+  .container {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+  
+  h1 {
+    text-align: center;
+    margin: 0;
+    font-size: 36px;
+    padding: 25px 0;
+    
+    color: white;
+    text-transform: uppercase;
+    text-shadow: 0.03em 0.2em 0 hsla(230,40%,50%,1);
+  }
+  
+  .title {
+    text-transform: uppercase;
+    font-size: 150%;
+  }
+  
+  .bar {
+    text-align: center;
+    background: white;
+    height:30px;
+    color:hsla(230,40%,50%,1);
+    margin: 0;
+    font-family: 'Righteous', cursive;
+    text-transform: uppercase;
+    
+  }
+  
+  .msgResult {
+    display: inline-block;
+    width: 15%;
+    margin-left: 3%;
+  }
+  
+  @media screen and (max-width: 400px) {
+    .btns {
+      font-size: 11px;
+      color:hsla(230,40%,50%,1);
+    }
+    
+    .msgDisplay {
+      font-size: 11px;
+      color:hsla(230,40%,50%,1);
+    }
+    
+    .msgResult {
+      font-size: 11px;
+      width: 25%;
+      color:hsla(230,40%,50%,1);
+    }
+  }
+  
+  .colourCode {
+    text-align: center;
+    color: white;
+    margin: 2% 0;
+    font-size: 30px;
+    text-shadow: 0.03em 0.2em 0 hsla(230,40%,50%,1);
+  }
+  
+  .square {
+    width: 30%;
+    margin: 1.66%;
+    padding-bottom: 30%;
+    float: left;
+    border-radius: 20%;
+    transition: opacity 1s, background 1s;
+    -webkit-transition: opacity 1s, background 1s;
+    -moz-transition: opacity 1s, background 1s;
+    
+    
+  
+  }
+  
+  button {
+    border: none;
+    background: none;
+    color: white;
+    height: 100%;
+    font-family: "Merriweather";
+    font-size: 17px;
+    transition: background 0.5s;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
+  
+  }
+  
+  button:focus {
+    outline: none;
+  }
+  
+  button:hover {
+    color:white;
+    background: hsla(230,40%,50%,1);
+  }
+  
+  .selected {
+    color:white;
+    background: hsla(230,40%,50%,1);
+  }
+  
+  .msgDisplay {
+    margin-right: 3%;
+  }
+  
+  footer {
+    clear: both;
+    margin-left: 45%;
+  }
+  #hardBtn{
+    font-family: 'Righteous', cursive;
+    color: hsla(230,40%,50%,1);
+  }
+  #easyBtn{
+    font-family: 'Righteous', cursive;
+    color: hsla(230,40%,50%,1);
+  }
 
-}
+  #restartBtn{
+    font-family: 'Righteous', cursive;
+    color: hsla(230,40%,50%,1);
+  }
 
-body:before {
-  width: 100%;
-  height: 100%;
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background-image: -moz-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
-  background-image: -ms-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
-  background-image: -webkit-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(53, 238, 167, 0.1));
-  background-image: -o-linear-gradient(top left, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
-  background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.75), rgba(47, 245, 170, 0.1));
-  background-size: auto;
-}
+  #hardBtn.selected{
+    font-family: 'Righteous', cursive;
+    background: hsla(230,40%,50%,1);
+    color:white;
+  }
 
-.square {
-  width: 30%;
-  border-radius: 15%;
-  padding-bottom: 30%;
-  background: #fff;
-  float: left;
-  margin: 1.66%;
-  -webkit-transition: background .5s;
-  -moz-transition: background .5s;
-  -o-transition: background .5s;
-  transition: background .5s;
-}
+  #easyBtn.selected{
+    font-family: 'Righteous', cursive;
+    background: hsla(230,40%,50%,1);
+    color:white;
+  }
 
-.container {
-  margin: 20px auto;
-  max-width: 600px;
-}
+  #restartBtn:hover{
+    font-family: 'Righteous', cursive;
+    background: hsla(230,40%,50%,1);
+    color:white;
+  }
 
-.heading {
-  color: #fff;
-  margin-top: 1%;
-  text-transform: uppercase;
-}
+  #easyBtn:hover{
+    font-family: 'Righteous', cursive;
+    background: hsla(230,40%,50%,1);
+    color:white;
+  }
 
-#optionsBar {
-  background: #fff;
-  color: #394585;
-}
+  #hardBtn:hover{
+    font-family: 'Righteous', cursive;
+    background: hsla(230,40%,50%,1);
+    color:white;
+  }
+  #colourDisplay{
+      font-size: 50px;
+  }
 
-#colorDisplay {
-  font-size: 200%;
-}
-
-#message {
-  display: inline-block;
-  width: 20%;
-}
-
-.btn-link {
-  border: none;
-  background: none;
-  outline: none;
-  color: #394585;
-  text-transform: uppercase;
-  font-family: 'Righteous', cursive;
-  letter-spacing: 1px;
-  font-size: inherit;
-  max-height: 100%;
-  -webkit-transition: all 1.0s;
-  -moz-transition: all 1.0s;
-  -o-transition: all 1.0s;
-  transition: all 1.0s;
-  outline: none;
-}
-
-.btn-link:hover {
-  text-decoration: none;
-  background: #5286ac;
-  color: #fff;
-}
-
-.selected {
-  background: #394585;
-  color: #fff;
-}
+  
