--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     height: 100%;
   }
   
+
   body {
     background: url("b1.gif") no-repeat center center fixed;
     margin: 0;
@@ -35,14 +36,16 @@ html {
   .container {
     max-width: 700px;
     margin: 0 auto;
+    animation:  bounceIn 5s ease;
   }
+  
   
   h1 {
     text-align: center;
     margin: 0;
     font-size: 36px;
     padding: 25px 0;
-    
+    animation: fadeInDown 2s ease-in-out;
     color: white;
     text-transform: uppercase;
     text-shadow: 0.03em 0.2em 0 hsla(230,40%,50%,1);
@@ -94,6 +97,7 @@ html {
     margin: 2% 0;
     font-size: 30px;
     text-shadow: 0.03em 0.2em 0 hsla(230,40%,50%,1);
+    animation:  bounceIn 2s ease;
   }
   
   .square {
@@ -102,9 +106,12 @@ html {
     padding-bottom: 30%;
     float: left;
     border-radius: 20%;
+    animation-name: bounceIn;
+    animation-duration: 1s;
     transition: opacity 1s, background 1s;
     -webkit-transition: opacity 1s, background 1s;
     -moz-transition: opacity 1s, background 1s;
+    
     
     
   
@@ -192,4 +199,62 @@ html {
       font-size: 50px;
   }
 
-  
+  @keyframes fadeInDown {
+
+    0% {opacity: 0;} // CSS properties at start
+	100% {opacity: 100;} // CSS properties at end
+	}  
+}
+
+
+@keyframes bounceIn {
+  from,
+  20%,
+  40%,
+  60%,
+  80%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+
+  20% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.9, 0.9, 0.9);
+    transform: scale3d(0.9, 0.9, 0.9);
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: scale3d(1.03, 1.03, 1.03);
+    transform: scale3d(1.03, 1.03, 1.03);
+  }
+
+  80% {
+    -webkit-transform: scale3d(0.97, 0.97, 0.97);
+    transform: scale3d(0.97, 0.97, 0.97);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.bounceIn {
+  -webkit-animation-duration: 0.75s;
+  animation-duration: 0.75s;
+  -webkit-animation-name: bounceIn;
+  animation-name: bounceIn;
+}
